--- a/index.html
+++ b/index.html
@@ -68,18 +68,28 @@
   </section>
 
   <section id="section3">
-    <h2>What can you make with 475,000 building blocks?</h2>
-    <p>The npm registry hosts the world’s largest collection of free, reusable code — the largest software registry in the world.</p>
-    <img src="images/binoculars.svg">
-    <hr>
-    <h3>Find</h3>
-    <p>Libraries like <a href="#">JQuery</a>, <a href="#">Bootstrap</a>, <a href="#">React</a>, and <a href="#">Angular</a>, and components from frameworks such as <a href="#">Ember</a>.</p>
-    <img src="images/mountain-flag.svg">
-    <h3>Discover</h3>
-    <p>Packages for mobile, IoT, front end, back end, robotics... everything you need to start building amazing things.</p>
-    <img src="images/backpack.svg">
-    <h3>Build</h3>
-    <p>Assemble packages like building blocks to quickly develop awesome new projects.</p>
+    <div class="top">
+      <h2>What can you make with 475,000 building blocks?</h2>
+      <p>The npm registry hosts the world’s largest collection of free, reusable code — the largest software registry in the world.</p>
+      <hr>
+    </div><br><br>
+    <div class="bottom">
+      <div class="col col-3">
+          <img src="images/binoculars.svg">
+        <h3>Find</h3>
+        <p>Libraries like <a href="#">JQuery</a>, <a href="#">Bootstrap</a><br>, <a href="#">React</a>, and <a href="#">Angular</a>, and <br>components from frameworks <br>such as <a href="#">Ember</a>.</p>
+      </div>
+      <div class="col-middle">
+        <img src="images/mountain-flag.svg">
+        <h3>Discover</h3>
+        <p>Packages for mobile, IoT, front <br>end, back end, robotics... <br>everything you need to start <br>building amazing things.</p>
+      </div>
+      <div class="col col-3">
+        <img src="images/backpack.svg">
+        <h3>Build</h3>
+        <p>Assemble packages like building <br>blocks to quickly develop <br>awesome new projects.</p>
+      </div>
+    </div>
   </section>
 
 </body>
