New design for the section 1; makes it more responsive. Gave header a background image, since it is the only way to match the design given. Made bottom class in section 3 bigger so that it looks more like the design.

--- a/index.html
+++ b/index.html
@@ -32,14 +32,12 @@
           <i class="fas fa-search" style="color: white;"></i>
       </button>
       <!---<img src="images/bear-logo.png" class="bear-logo">-->
-      <a href="#" class="action-links">log in</a>
-      <a href="#" class="action-links">sign up</a>
+      <a href="#" class="action-links">sign up or log in</a>
     </div>
     <div class="bottom-header">
       <h1>Build amazing things</h1>
-      <p class="text">npm is the package manager for JavaScript and the world’s largest <br>software registry. Discover packages of reusable code — and <br>assemble them in powerful new ways.</p>
+      <p class="text">npm is the package manager for JavaScript and the world’s largest software registry. Discover packages of reusable code — and assemble them in powerful new ways.</p>
       <br><a href="#" class="header-button">Sign up for npm</a>
-      <!--<img src="images/city-scape.svg" class="header-image">-->
     </div>
   </header>
   
