Last changes in Top Header

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
       <button type="submit" class="search-button">
           <i class="fas fa-search" style="color: white;"></i>
       </button>
-      <!---<img src="images/bear-logo.png" class="bear-logo">-->
       <a href="#" class="action-links">sign up or log in</a>
+      <img src="images/bear-logo.png" class="bear-logo">
     </div>
     <div class="bottom-header">
       <h1>Build amazing things</h1>
